add rz Id validation in the backend
